--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6" /* Specify ECMAScript target version: */,
     "module": "commonjs",
     "declaration": true,
     "outDir": "./lib",
