--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aes-js": "^3.1.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
