--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aes-crypto-ts",
-  "version": "1.0.6",
+  "name": "hesabe-crypt-ts",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "aes-ts": "^0.0.0-alpha.0"
+
   }
 }
